Database create works

--- a/PerformanceApplication/PerformanceApplication.csproj
+++ b/PerformanceApplication/PerformanceApplication.csproj
@@ -129,6 +129,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\performances.mdf" />
+    <Content Include="App_Data\performances_log.ldf">
+      <DependentUpon>performances.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -167,9 +171,7 @@
     <Content Include="Views\BandArtist\Index.cshtml" />
     <Content Include="Views\BandArtist\create.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
