--- a/PerformanceApplication/Web.config
+++ b/PerformanceApplication/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+
+  <connectionStrings>
+    <add name="DBconnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Rawes\source\repos\PerformanceApplication\App_Data\performances.mdf;Integrated Security=True"/>
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
