Bands or artists are able to edit now

--- a/PerformanceApplication/PerformanceApplication.csproj
+++ b/PerformanceApplication/PerformanceApplication.csproj
@@ -170,6 +170,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\BandArtist\Index.cshtml" />
     <Content Include="Views\BandArtist\create.cshtml" />
+    <Content Include="Views\BandArtist\edit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
