--- a/PerformanceApplication/PerformanceApplication.csproj
+++ b/PerformanceApplication/PerformanceApplication.csproj
@@ -171,9 +171,9 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\BandArtist\Index.cshtml" />
-    <Content Include="Views\BandArtist\create.cshtml" />
-    <Content Include="Views\BandArtist\edit.cshtml" />
-    <Content Include="Views\BandArtist\details.cshtml" />
+    <Content Include="Views\BandArtist\Create.cshtml" />
+    <Content Include="Views\BandArtist\Edit.cshtml" />
+    <Content Include="Views\BandArtist\Details.cshtml" />
     <Content Include="Views\Stage\Index.cshtml" />
     <Content Include="Views\Stage\Create.cshtml" />
     <Content Include="Views\Stage\Edit.cshtml" />
