--- a/PerformanceApplication/PerformanceApplication.csproj
+++ b/PerformanceApplication/PerformanceApplication.csproj
@@ -182,6 +182,7 @@
     <Content Include="Views\Stage\Details.cshtml" />
     <Content Include="Views\Performance\Index.cshtml" />
     <Content Include="Views\Performance\Create.cshtml" />
+    <Content Include="Views\Performance\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
